fixed text flickering on hover

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -208,6 +208,8 @@ nav{
 .interests_item:hover{
     font-size: 3vh;
     transition: all 0.3s ease;
+    padding: 0 10px;
+	margin-right: 0px;
 }
 
 .computer::before{
